--- a/IsoBridge.ISO8583/IsoBridge.ISO8583.csproj
+++ b/IsoBridge.ISO8583/IsoBridge.ISO8583.csproj
@@ -4,6 +4,13 @@
     <ProjectReference Include="..\IsoBridge.Core\IsoBridge.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.*" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.*" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="6.*" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.*" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
