feat(web): wire DI for ISO8583 & infra, Serilog, Swagger; add /health

--- a/IsoBridge.Web/appsettings.json
+++ b/IsoBridge.Web/appsettings.json
@@ -2,8 +2,35 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/isobridge-.log",
+          "rollingInterval": "Day"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithThreadId"
+    ]
+  },
+  "Iso8583": {
+    "TemplatePath": "Config/iso8583-templates.json",
+    "UseBcd": false
+  },
+  "AuditSecurity": {
+    "HmacKey": "dev-secret-change"
+  }
 }
