fix(iso8583): refactor parser to use dictionary-based field templates (Key/Value)

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,9 @@ package-lock.json
 .vscode/
 *.code-workspace
 
+# EF Migrations
+Migrations/
+
 ## EF Core migrations cache
 MigrationsSnapshot.cs
 
