feat(api): implement forward endpoint + REST adapter with auditing, masking, and retry policy

--- a/IsoBridge.Web/appsettings.Development.json
+++ b/IsoBridge.Web/appsettings.Development.json
@@ -1,8 +1,41 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Iso8583": {
+    "TemplatePath": "Config/iso8583-templates.json",
+    "UseBcd": false
+  },
+  "ConnectionStrings": {
+    "AuditDb": "Data Source=audit.db"
+  },
+  "AuditSecurity": {
+    "HmacKey": "dev-only-change-me"
+  },
+  "Forwarding": {
+    "Routes": {
+      "auth-rest": {
+        "Type": "rest",
+        "BaseAddress": "https://httpbin.org",
+        "Path": "/post",
+        "Method": "POST",
+        "Headers": {
+          "X-IsoBridge": "demo"
+        },
+        "SendRaw": false
+      },
+      "echo-raw": {
+        "Type": "rest",
+        "BaseAddress": "https://httpbin.org",
+        "Path": "/anything/raw",
+        "Method": "POST",
+        "SendRaw": true
+      }
     }
+  },
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+    ]
   }
 }
