--- a/IsoBridge.Adapters/IsoBridge.Adapters.csproj
+++ b/IsoBridge.Adapters/IsoBridge.Adapters.csproj
@@ -4,6 +4,13 @@
     <ProjectReference Include="..\IsoBridge.Core\IsoBridge.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+  <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.10" />
+    <PackageReference Include="Polly" Version="8.6.4" />
+    <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
