feat(soap): add custom SOAP endpoint, SOAP forwarder, and route-type router for ISOSOAP flows

--- a/IsoBridge.Web/appsettings.Development.json
+++ b/IsoBridge.Web/appsettings.Development.json
@@ -27,6 +27,16 @@
         "Path": "/anything/raw",
         "Method": "POST",
         "SendRaw": true
+      },
+      "soap-local": {
+        "Type": "soap",
+        "BaseAddress": "https://localhost:7013",
+        "Path": "/soap/paymentauth",
+        "Method": "POST",
+        "SoapAction": "urn:isobridge:payments/PaymentAuth",
+        "Headers": {
+          "X-IsoBridge": "demo"
+        }
       }
     }
   },
