feat(ci): add integration tests, Docker support, and GitHub Actions workflow for IsoBridge

--- a/IsoBridge.Tests/IsoBridge.Tests.csproj
+++ b/IsoBridge.Tests/IsoBridge.Tests.csproj
@@ -4,28 +4,34 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.*" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.*" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="6.*" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.*" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
-    <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+    <!-- Core test dependencies -->
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="xunit" Version="2.5.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="coverlet.collector" Version="3.1.2">
+    <PackageReference Include="coverlet.collector" Version="6.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+
+    <!-- Needed for WebApplicationFactory<> -->
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.29" />
+
+    <!-- Needed for EF InMemory tests -->
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.29" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\IsoBridge.Web\IsoBridge.Web.csproj" />
     <ProjectReference Include="..\IsoBridge.Core\IsoBridge.Core.csproj" />
     <ProjectReference Include="..\IsoBridge.ISO8583\IsoBridge.ISO8583.csproj" />
     <ProjectReference Include="..\IsoBridge.Infrastructure\IsoBridge.Infrastructure.csproj" />
