--- a/IsoBridge.Web/IsoBridge.Web.csproj
+++ b/IsoBridge.Web/IsoBridge.Web.csproj
@@ -24,8 +24,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-<ItemGroup>
+<!-- <ItemGroup>
   <None Update="Config\iso8583-templates.json" CopyToOutputDirectory="PreserveNewest" />
-</ItemGroup>
+</ItemGroup> -->
 
 </Project>
